# dynamod

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  neomake.tomlx
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: logind.conf
config/dbus-1/: org.freedesktop.hostname1.conf  org.freedesktop.locale1.conf  org.freedesktop.login1.conf  org.freedesktop.systemd1.conf  org.freedesktop.timedate1.conf
config/pam.d/: dynamod-logind-snippet
config/services/: agetty-tty1.toml  bootmisc.toml  dbus.toml  dynamod-hostnamed.toml  dynamod-logind.toml  dynamod-sd1bridge.toml  example.toml  fsck.toml  fstab-mount.toml  hostname.toml  machine-id.toml  mdev-coldplug.toml  modules-load.toml  network.toml  nginx.toml  postgresql.toml  remount-root-rw.toml  sshd.toml  sysctl.toml  syslog.toml  udev-coldplug.toml  udev.toml
config/supervisors/: desktop.toml  early-boot.toml  root.toml
docker/: Dockerfile  docker-compose.yml
docker/services/: agetty-tty1.toml  bootmisc.toml  dynamod-logd.toml  hostname.toml  machine-id.toml  network.toml  sysctl.toml  syslog.toml
docs/: architecture.md  configuration.md  docker.md  installation.md
rust/: Cargo.toml
rust/dynamod-common/: Cargo.toml
rust/dynamod-common/src/: lib.rs  paths.rs  protocol.rs  types.rs
rust/dynamod-hostnamed/: Cargo.toml
rust/dynamod-hostnamed/src/: hostname.rs  locale.rs  main.rs  timedate.rs
rust/dynamod-logd/: Cargo.toml
rust/dynamod-logd/src/: collector.rs  main.rs  storage.rs
rust/dynamod-logind/: Cargo.toml
rust/dynamod-logind/src/: acpi.rs  auth.rs  cgroup.rs  config.rs  device.rs  inhibitor.rs  main.rs  manager.rs  power.rs  runtime_dir.rs  seat.rs  session.rs  state.rs  svmgr_client.rs  user.rs  vtswitch.rs
rust/dynamod-sd1bridge/: Cargo.toml
rust/dynamod-sd1bridge/src/: main.rs  manager.rs  mapping.rs  unit.rs
rust/dynamod-sdnotify/: Cargo.toml
rust/dynamod-sdnotify/src/: lib.rs
rust/dynamod-svmgr/: Cargo.toml
rust/dynamod-svmgr/src/: main.rs  shutdown.rs
rust/dynamod-svmgr/src/cgroup/: hierarchy.rs  limits.rs  mod.rs  monitor.rs
rust/dynamod-svmgr/src/config/: mod.rs  service.rs  supervisor.rs  validate.rs
rust/dynamod-svmgr/src/dependency/: cycle.rs  frontier.rs  graph.rs  mod.rs
rust/dynamod-svmgr/src/ipc/: control.rs  init_channel.rs  mod.rs
rust/dynamod-svmgr/src/namespace/: setup.rs
rust/dynamod-svmgr/src/process/: mod.rs  monitor.rs  readiness.rs  spawn.rs
rust/dynamod-svmgr/src/supervisor/: intensity.rs  lifecycle.rs  mod.rs  strategy.rs  tree.rs
rust/dynamodctl/: Cargo.toml
rust/dynamodctl/src/: main.rs
rust/dynamodctl/src/commands/: mod.rs
rust/pam_dynamod_logind/: Cargo.toml
rust/pam_dynamod_logind/src/: lib.rs
test/alpine/: boot-disk.sh  boot-gnome.sh  boot-gui.sh  boot-wayland.sh  build-test.sh  test-dbus.sh
test/alpine/scripts/: dbus-smoketest.sh  sway-session.sh
test/artix/: boot-full.sh
test/artix/scripts/: artix-verify.sh  mkimage-artix.sh
test/qemu/: run-vm.sh
test/void/: boot-full.sh
test/void/scripts/: mkimage-void.sh  void-verify.sh
tools/: install-alpine.sh  install-sdnotify.sh  install.sh  mkimage.sh  mkiso.sh
zig/: build.zig  build.zig.zon
zig/src/: boot.zig  child.zig  cmdline.zig  constants.zig  emergency.zig  event_loop.zig  ipc.zig  kmsg.zig  live.zig  main.zig  msgpack.zig  reaper.zig  rootdev.zig  shutdown.zig  signal.zig  switchroot.zig
