[workspace]
resolver = "2"
members = [
    "dynamod-svmgr",
    "dynamod-common",
    "dynamodctl",
    "dynamod-logd",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rmp-serde = "1"
nix = { version = "0.29", features = ["signal", "process", "socket", "mount", "sched", "user", "event"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"

[profile.release]
opt-level = 2
lto = true
strip = "symbols"
