[workspace]
resolver = "2"
members = [
    "dynamod-svmgr",
    "dynamod-common",
    "dynamodctl",
    "dynamod-logd",
    "dynamod-logind",
    "dynamod-sd1bridge",
    "dynamod-hostnamed",
]
# dynamod-sdnotify is excluded from the default workspace build because it
# produces a cdylib (libsystemd.so) which requires the glibc target — musl
# does not support shared libraries. Build it separately:
#   cargo build --release -p dynamod-sdnotify --target x86_64-unknown-linux-gnu
exclude = [
    "dynamod-sdnotify",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rmp-serde = "1"
nix = { version = "0.29", features = ["signal", "process", "socket", "mount", "sched", "user", "event"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "io-util", "sync", "time"] }

[profile.release]
opt-level = 2
lto = true
strip = "symbols"
