[package]
name = "dynamod-hostnamed"
version.workspace = true
edition.workspace = true

[dependencies]
zbus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"
