[package]
name = "dynamod-sd1bridge"
version.workspace = true
edition.workspace = true

[dependencies]
dynamod-common = { path = "../dynamod-common" }
zbus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
rmp-serde = { workspace = true }
