[package]
name = "dynamod-svmgr"
version.workspace = true
edition.workspace = true

[dependencies]
dynamod-common = { path = "../dynamod-common" }
serde = { workspace = true }
toml = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"

[dev-dependencies]
serde_json = "1"
